🐛 fix: Fix authentication flow and admin login
로그인 루프 문제를 해결하고 관리자 인증 흐름을 안정화했습니다.
- 백엔드 SecurityConfig 설정 조정
- 프론트엔드 API 클라이언트의 토큰 검증 로직 수정
- 관리자 계정 로그인 시 무한 리다이렉트 방지 처리